--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: sans-serif;
-  background: #000;
+  font-family: 'Ubuntu', sans-serif;
+  background: red;
   color: #2F3640;
 }
