--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+  height: 100%;
+  font-family: sans-serif;
   background: #2F3640;
   color: #2F3640;
   scroll-behavior: smooth;
